# WebProject

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  test_register.py
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: auth.py  notes.py  verify.py
backend/app/core/: config.py  database.py  jwt.py  logging.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  attachment.py  note.py  user.py
backend/app/repositories/: attachment_repository.py  note_repository.py
backend/app/schemas/: attachment.py  note.py
backend/app/services/: file_service.py  mail_service.py  note_service.py
backend/app/utils/: file_storage.py
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ConfirmationModal.tsx  NoteCard.tsx  NoteForm.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useNotes.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  VerifyPage.tsx
frontend/src/services/: apiClient.ts  authService.ts  notesService.ts
