[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-note-manager-backend"
version = "0.1.0"
description = "Backend for Personal Note Manager"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "email-validator",
  "passlib[argon2]>=1.7.4",
  "python-jose",
  "aiofiles",
  "python-multipart",
]

[tool.setuptools]
packages = ["app"]
